# 2024_Main_Robot

./: .gitignore  Choreo Project.chor  LICENSE  README.md  TODO.md  TODO.txt  build.gradle  mid2chrp.py  networktables-apr-1-backup.json  networktables-final.json  settings.gradle
.github/workflows/: build.yml  main.yml  on_pr.yml
.wpilib/: wpilib_preferences.json
BlockAuto/: build.gradle
MathLib/: build.gradle
Messenger/MessengerClient/: build.gradle
Messenger/messenger-client/: Cargo.toml
Messenger/messenger-client/src/: lib.rs
Messenger/messenger-server/: build_rpi.sh
Messenger/messenger-server/deploy/: README.txt  run.sh
Pathfinding/: Cargo.toml  build.gradle  config.json  crescendo.json  environment.json  grids.json
Pathfinding/src/: collision.rs  config.rs  dijkstra.rs  grid.rs  main.rs  theta_star.rs  vectors.rs
Pathfinding/src/main/java/com/swrobotics/pathfinding/core/grid/: Grid.java
Pathfinding2/: Cargo.toml  config.json  environment.json
Pathfinding2/circle_path_2/: circle_path_2.pde
Pathfinding2/src/: bezier.rs  config.rs  geom.rs  gui.rs  main.rs  math.rs  obstacle.rs
Robot/: .gitignore  Chreo_Auto_Project.chor  build.gradle  networktables.json  simgui-ds.json  simgui-window.json  simgui.json
Robot/.pathplanner/: settings.json
Robot/src/main/deploy/choreo/: Amp Side Mid A.1.traj  Amp Side Mid A.2.traj  Amp Side Mid A.3.traj  Amp Side Mid A.4.traj  Amp Side Mid A.traj  Amp Side Mid B.1.traj  Amp Side Mid B.2.traj  Amp Side Mid B.3.traj  Amp Side Mid B.4.traj  Amp Side Mid B.traj  Amp Side Start A.1.traj  Amp Side Start A.traj  Amp Side Start B.1.traj  Amp Side Start B.2.traj  Amp Side Start B.traj  (+25 more)
Robot/vendordeps/: Phoenix6.json
RobotLib/: build.gradle
ShuffleLog/: .gitignore  build.gradle  layout.ini  persistence.properties
TaskManager/TaskManager-Core/: build.gradle
TaskManager/TaskManager-FileSystem/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+555 files in other folders)
