[package]
name = "pathfinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
bytes = "1.5.0"
messenger-client = { path = "../Messenger/messenger-client" }
ordered-float = "4.1.1"
priority-queue = "1.3.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = [ "rt-multi-thread", "fs" ] }
uuid = { version = "1.6.1", features = [ "v4", "fast-rng", "serde" ] }
